2009-XX-XX

  * updated aclocal.m4 to support python versions 2.5 and 2.6, closes #137
  * use the email addres in the reporter field, closes #136
  * Fixed an error in blog update function

    All Fixes by: Bas van der Vlies

2009-04-09
  * Fixed in parsing the reflow parameter, closes #123
    Reported by: tomasz dot sterna at sensisoft dot com
    Fixed by: Bas van der Vlies

   * implemented workflow for tickets that are reopend, closes #70
     Reported by: hju att jochenkuhl dot de
     Author by: Bas van der Vlies

   * added FullBlogPlugin support. So we can update/create the blogs 
     via email, #116
     mail with subject line: <blog:.*> will create/update a blog entry.
     Authors: Bas van der Vlies & lucas dot eisenzimmer at t-systems-mms dot com
   
   * email2trac require at least python version 2.4, closes #131
     Reported by: otto at bergerdata dot de
     Fixed by: Bas van der Vlies

   * We can now set ticket fields for a new ticket via the 'subject' line:
       - Subject: <description> #?<field=value>[,<field=value>]*
     closes #130 
     
     Requested by: Steve
     Implemented by: Bas van der Vlies

2009-01-30
  * applied patch exit with non-zero return code on failure, closes #117
    Author: admin-egon at ikw dot uos dot de
    Applied by : Bas van der Vlies

  * Ticket update with attachments did not work, closes #120
    Reported by: Alexander Verkooijen (alexander at sara dot nl)
    Fixed by: Bas van der Vlies

  * Removed obsolete code
    Author :  Bas van der Vlies

  * When email address is known then the author name and email address
    is used from the preference tab.  The match is case insensitive,
    closes #118
    Reported by: Pusateri, Matthew <Matthew dot Pusateri at tekelec dot com
    Fixed by: Bas van der Vlies

  * Ticket id is not reported as ticket change, eg:
    {{{
        *   id  set to 118
    }}}
    Author :  Bas van der Vlies

2009-01-19